--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "sass": "^1.62.1",
     "values.js": "^2.1.1"
   },
